--- a/index.html
+++ b/index.html
@@ -22,36 +22,36 @@
       <h3>Landscapes</h3>
       <div id="galeria">
         <div class="kep1 kep">
-          <img src="/img/kep1.jpg" alt="kep" class="kep1" />
+          <img src="./img/kep1.jpg" alt="kep" class="kep1" />
           <p>Ez itt egy tó</p>
         </div>
 
         <div class="kep2 kep">
-          <img src="/img/kep2.jpg" alt="kep" />
+          <img src="./img/kep2.jpg" alt="kep" />
           <p>Ez itt egy tó</p>
         </div>
         <div class="kep3 kep">
-          <img src="/img/kep3.jpg" alt="kep" />
+          <img src="./img/kep3.jpg" alt="kep" />
           <p>Ez egy egy tó</p>
         </div>
         <div class="kep4 kep">
-          <img src="/img/kep4.jpg" alt="kep" />
+          <img src="./img/kep4.jpg" alt="kep" />
           <p>Ez itt egy hegy</p>
         </div>
         <div class="kep5 kep">
-          <img src="/img/kep5.jpg" alt="kep" />
+          <img src="./img/kep5.jpg" alt="kep" />
           <p>Ez itt egy virág</p>
         </div>
         <div class="kep6 kep">
-          <img src="/img/kep6.jpg" alt="kep" />
+          <img src="./img/kep6.jpg" alt="kep" />
           <p>Ez itt egy tó</p>
         </div>
         <div class="kep7 kep">
-          <img src="/img/kep7.jpg" alt="kep" />
+          <img src="./img/kep7.jpg" alt="kep" />
           <p>Ez itt egy hegy</p>
         </div>
         <div class="kep8 kep">
-          <img src="/img/kep8.jpg" alt="kep" />
+          <img src="./img/kep8.jpg" alt="kep" />
           <p>Ez itt egy erdő</p>
         </div>
       </div>
